apps/media/jellyfin/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 911
        runAsGroup: 911
        fsGroup: 911
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: [ 44, 104 ]
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: jellyfin
          image: ghcr.io/jellyfin/jellyfin:10.9.6
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ "ALL" ]
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 6000m
              memory: 6Gi
              gpu.intel.com/i915: 1000m
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cantor-data
              mountPath: /mnt/cantor
            - name: cache
              mountPath: /cache
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: cantor-data
          nfs:
            server: 192.168.1.55
            path: /mnt/pool-0/data
        - name: cache
          emptyDir: { }
