apps/media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - jellyfin.euclid.stonegarden.dev
        - jellyfin.stonegarden.dev
      secretName: jellyfin-ingress-tls
  rules:
    - host: jellyfin.euclid.stonegarden.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
    - host: jellyfin.stonegarden.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
